@@ -16,3 +16,5 @@ t/00_load.t
 t/01_util.t
 t/02_prefix_mode_map.t
 t/03_channel_list.t
+t/04_channel_modes.t
+t/05_channel_modes_2.t
